@@ -1,3 +1,7 @@
+2004-11-16  Pascal Scheffers  <pascal@scheffers.net>
+
+	* tkchat.tcl: jabber: add ~ to the URL recognition regexp.
+	
 2004-11-16  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Babelfish is now only initialized if the user clicks
